# qcap2-dev

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.xlnk2  Makefile  TODO.md  setup-env.sh  test_qcap2_loop.sdp
.github/workflows/: ci.yml
build_allegro/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_qcap2_audio_sink  test_qcap2_formats  test_qcap2_sync  test_qcap2_video_sink
build_allegro/Testing/Temporary/: CTestCostData.txt
build_fallback/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_qcap2_audio_sink  test_qcap2_demux_mux  test_qcap2_demuxer  test_qcap2_demuxer_mock  test_qcap2_demuxer_rtsp  test_qcap2_formats  test_qcap2_graphics  test_qcap2_muxer  test_qcap2_muxer_rtsp  test_qcap2_processing  test_qcap2_sdp  test_qcap2_sync  test_qcap2_video_sink
build_fallback/Testing/Temporary/: CTestCostData.txt
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_qcap2_audio_sink  test_qcap2_demux_mux  test_qcap2_demuxer  test_qcap2_demuxer_mock  test_qcap2_demuxer_rtsp  test_qcap2_formats  test_qcap2_graphics  test_qcap2_muxer  test_qcap2_muxer_rtsp  test_qcap2_processing  test_qcap2_sdp  test_qcap2_sync  test_qcap2_video_sink
build_test/Testing/Temporary/: CTestCostData.txt
cmake/: FindAllegroVCU.cmake
include/: NvSIPLClient.hpp  hdal.h  qcap.hi3531a.h  qcap2.allegro.h  qcap2.allegro2.h  qcap2.buffer.h  qcap2.devices.h  qcap2.dmabuf.h  qcap2.drm.h  qcap2.h  qcap2.processing.h  qcap2.sync.h  qcap2.types.h  qcap2.version.h
include/pylonc/: PylonC.h
src/: qcap2.buffer.cpp  qcap2.buffer.ffmpeg.h  qcap2.buffer_priv.h  qcap2.demuxer.cpp  qcap2.devices.cpp  qcap2.devices_priv.h  qcap2.formats.cpp  qcap2.graphics.cpp  qcap2.muxer.cpp  qcap2.processing.cpp  qcap2.processing_priv.h  qcap2.sync.cpp  qcap2.utils.cpp  qcap2.vcuallegro.cpp
tests/: test_qcap2_audio_sink.cpp  test_qcap2_buffer.cpp  test_qcap2_demux_mux.cpp  test_qcap2_demuxer.cpp  test_qcap2_demuxer_mock.cpp  test_qcap2_demuxer_rtsp.cpp  test_qcap2_formats.cpp  test_qcap2_graphics.cpp  test_qcap2_muxer.cpp  test_qcap2_muxer_rtsp.cpp  test_qcap2_processing.cpp  test_qcap2_sdp.cpp  test_qcap2_sync.cpp  test_qcap2_utils.cpp  test_qcap2_video_sink.cpp
usecases/: 0-rcbuf-custom.cpp  1-rcbuf-queue.cpp  2-rcbuf-queue.cpp  3-rcbuf-queue.cpp  4-rcbuf-queue.cpp  5-demuxer.cpp  5-encoder-decoder-rcbuf-recycle.cpp
wiki/: AUDIO-ENCODER-DECODER.md  AUDIO-RESAMPLER.md  AV-FRAME-BUFFER.md  BUFFER-RECYCLING-ANALYSIS.md  FRAME-POOL.md  GRAPHICS.md  PACKET-POOL.md  RCBUF-EXTENSION-PLAN.md  RCBUF-QUEUE-RECYCLE-EXPLAINED.md  RCBUF-QUEUE.md  RCBUF.md  SYNC-EVENT-HANDLERS.md  VIDEO-DECODER.md  VIDEO-ENCODER.md  VIDEO-SCALER.md  index.md
